--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         .hero-section {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             padding: 60px 15px;
         }
@@ -53,7 +53,7 @@
         }
 
         .hero-image {
-            max-width: 50%;
+            max-width: 40%;
             transform: rotate(-3deg);
             border: 2px solid #b5895d;
         }
