Update product marketing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>readiNUS - SEP planning made easy</title>
+    <title>readiNUS - SEP Planning</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -178,11 +178,17 @@
     <!-- Hero Section -->
     <div class="container-fluid hero-section">
         <div class="hero-text">
-            <h1>SEP planning made easy</h1>
+            <h1>Informed decisions for your SEP</h1>
             <div class="diamond-bullets">
                 &bull; &bull; &bull; &bull;
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+            <br/>
+            <ul>
+                <li>Relevant information about all your favourite partner universities</li><br/>
+                <li>Advice from your experienced seniors</li>
+            </ul>
+            <br/>
+            <h3>Leave no room for uncertainty in your SEP application!</h3>
         </div>
         <div class="hero-image">
             <img src="./icon.jpg" alt="readiNUS logo">
@@ -196,7 +202,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     &times;
                 </button>
-                <h5 class="modal-title" id="enquireModalLabel">Your space to experience</h5>
+                <h5 class="modal-title" id="enquireModalLabel">Make the best informed decisions for SEP now!</h5>
                 <form>
                     <input type="text" placeholder="FULL NAME">
                     <div class="form-group">
